deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-openshift
  namespace: hello
  labels:
    app: hello-openshift
    app.kubernetes.io/component: hello-openshift
    app.kubernetes.io/instance: hello-openshift
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: hello-openshift
  template:
    metadata:
      labels:
        deployment: hello-openshift
    spec:
      containers:
      - name: hello-openshift
        image: docker.io/openshift/hello-openshift
        imagePullPolicy: Always
      serviceAccountName: hello-openshift
