service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-openshift
  namespace: hello
  labels:
    app: hello-openshift
    app.kubernetes.io/component: hello-openshift
    app.kubernetes.io/instance: hello-openshift
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    deployment: hello-openshift
  type: ClusterIP
